# FractalPainter

./: .directory  .gitignore  CMakeLists.txt  Generators.cpp  Generators.h  MainFractalWidget.cpp  MainFractalWidget.h  README.md  main.cpp
